[package]
name = "iOMaker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.29.0", features = ["rand"]}
once_cell = "1.8.0"
thiserror = "1.0.26"
ff = { version = "0.11", features = ["derive"] }
rand="0.8.4"
num-traits = "0.2.14"
derive_more = "0.99.0"
rayon = "1.5.1"
num-bigint = {version = "0.4.3", features = ["rand"] }

[profile.test]
opt-level = 3