[package]
name = "iOMaker"
version = "0.1.0"
edition = "2021"
authors = ["Sora Suegami"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.33.0", features = ["rand", "sparse"] }
nalgebra-sparse = "0.10.0"
once_cell = "1.19.0"
ark-ff = { version = "0.4.2" }
num-bigint = { version = "0.4.3", features = ["rand"] }
num-traits = "0.2.17"
dyn-clone = "1.0.11"
itertools = "0.11.0"
downcast-rs = "1.2.0"
thiserror = "1.0.43"
rand = "0.8.5"
hex = "0.4.3"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.64"
rayon = "1.8.0"
bincode = "1.3.3"
petgraph = "0.6.5"
ark-bn254 = { version = "0.4.0" }
ark-ec = { version = "0.4.2" }
regex = "1.6.1"
ark-std = { version = "0.4.0", features = ["print-trace"] }

# [profile.test]
# opt-level = 3
